# poetry-plugin-bump

./: .pre-commit-config.yaml  pyproject.toml  readme.md
.github/: renovate.json
.github/workflows/: lint.yaml  release.yaml
poetry_plugin_bump/: plugin.py
